# social

./: .gitignore  cert.crt  cert.key  pyproject.toml
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_profile_photo.py  0003_contact_contact_account_con_created_8bdae6_idx.py
account/templates/: base.html
account/templates/account/: dashboard.html
account/templates/account/user/: detail.html
account/templates/registration/: login.html
actions/: models.py
actions/migrations/: 0001_initial.py
images/: admin.py  forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
images/templates/images/image/: create.html  detail.html  list.html
socialsite/: settings.py  urls.py
