[tool.poetry]
name = "socialsite"
version = "0.1.0"
description = ""
authors = ["Dorstol <olehsofronov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.1"
pillow = "^10.1.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
