[tool.poetry]
name = "socialsite"
version = "0.1.0"
description = ""
authors = ["Dorstol <olehsofronov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.1"
pillow = "^10.1.0"
black = "^23.11.0"
social-auth-app-django = "^5.4.0"
django-extensions = "^3.2.3"
werkzeug = "^3.0.1"
pyopenssl = "^23.3.0"
requests = "^2.31.0"
easy-thumbnails = "^2.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
